--- a/static/css/task_build_baron.css
+++ b/static/css/task_build_baron.css
@@ -9,14 +9,44 @@
    float: right;
 }
 
-.buildbaron-issue {
-  padding-top: 12px;
+.buildbaron-issue-summary {
+  text-align: left;
 }
 
-.buildbaron-issue-open {
+.buildbaron-issue + .buildbaron-issue {
+  padding-top: 6px;
+  border-top: 1px solid ;
+  border-color: gray;
+}
+
+.buildbaron-issue {
+  margin: 6px;
   font-family: Helvetica,arial,freesans,clean,sans-serif;
   color: rgb(100, 100, 100);
   font-size: 13px;
-  padding: 0px;
   vertical-align: bottom;
+  padding: 0px;
+}
+
+.buildbaron-issue-detail-left {
+  text-align: left;
+  width: 33%;
+  float: left;
+}
+.buildbaron-issue-detail-middle {
+  text-align: center;
+  float: left;
+}
+.buildbaron-issue-detail-right {
+  text-align: right;
+  float: right;
+}
+
+.buildbaron-row{
+  clear: both;
+  overflow: auto;
+}
+
+.buildbaron-row-open{
+  background-color: #f9e2e2;
 }
