--- a/static/partials/task_build_baron.html
+++ b/static/partials/task_build_baron.html
@@ -1,4 +1,8 @@
-<div class="panel buildbaron-panel" ng-controller="TaskBuildBaronCtrl" ng-show="task.status == 'failed' && ! task.task_end_details.timed_out">
+<div
+    class="panel buildbaron-panel"
+    ng-controller="TaskBuildBaronCtrl"
+    ng-show="task.status == 'failed' && ! task.task_end_details.timed_out"
+    >
   <div class="panel-heading">
     <h2>
         <image class="gravatar-small" src="/ui/plugin/buildbaron/static/images/baron.png"></img> Build Baron
@@ -11,21 +15,37 @@
     </div>
     <div ng-show="build_baron_status == 'error'">Searching jira failed</div>
     <div ng-show="build_baron_status == 'nothing'">No results found matching task or tests</div>
-    <table ng-show="build_baron_status == 'success'"  class="buildbaron-results">
-       <tbody ng-repeat="issue in build_baron_results">
-           <tr>
-               <td colspan="3" class="buildbaron-issue">
-                   <a href="https://jira.mongodb.org/browse/[[issue.key]]">[[issue.key]]: [[issue.fields.summary]]</a>
-                   &nbsp;
-                   <span class="buildbaron-issue-status">[[issue.fields.status.name]]</span>
-               </td>
-           </tr>
-           <tr ng-show="issue.fields.status.name == 'Open'">
-               <td class="buildbaron-issue-open" >Created: [[issue.fields.created | date]]</td>
-               <td class="buildbaron-issue-open" >Update: [[issue.fields.updated | date]]</td>
-               <td class="buildbaron-issue-open" >Assignee: [[issue.fields.assignee.displayName]]</td>
-           </tr>
-      </tbody>
-    </table>
+    <div ng-show="build_baron_status == 'success'"  class="buildbaron-results">
+       <div class="buildbaron-issue" ng-repeat="issue in build_baron_results">
+           <div class="buildbaron-row buildbaron-row-[[issue.fields.status.name | lowercase]]">
+               <span class="buildbaron-issue-summary">
+                   <a href="https://jira.mongodb.org/browse/[[issue.key]]">
+                       [[issue.key]]: [[issue.fields.summary]]
+                   </a>
+               </span>
+               <span class="buildbaron-issue-status">[[issue.fields.status.name]]</span>
+            </div>
+           <div class="buildbaron-row">
+               <div class="buildbaron-issue-detail buildbaron-issue-detail-left">
+                   Created: [[issue.fields.created | date]]
+               </div>
+               <div class="buildbaron-issue-detail buildbaron-issue-detail-middle">
+                   Update: [[issue.fields.updated | date]]
+               </div>
+               <div
+                   class="buildbaron-issue-detail buildbaron-issue-detail-right"
+                   ng-show="issue.fields.assignee.displayName != nil"
+                   >
+                   Assignee: [[issue.fields.assignee.displayName]]
+               </div>
+               <div
+                   class="buildbaron-issue-detail buildbaron-issue-detail-right"
+                   ng-show="issue.fields.assignee.displayName == nil"
+                   >
+                   Unassigned
+               </div>
+            </div>
+      </div>
+    </div>
   </div>
 </div>
