further reactions to code reviews

--- a/static/css/task_build_baron.less
+++ b/static/css/task_build_baron.less
@@ -1,28 +1,33 @@
-.buildbaron-panel {
-  max-height: 800px;
-  overflow-x: hidden;
-  overflow-y: auto;
+.buildbaron-panel{
+	max-height: 800px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
-.buildbaron-issue-status {
-  text-align: right;
-  float: right;
+
+.buildbaron-issue-status{
+   text-align: right;
+   float: right;
 }
+
 .buildbaron-issue-summary {
   text-align: left;
 }
+
 .buildbaron-issue + .buildbaron-issue {
   padding-top: 6px;
   border-top: 1px solid ;
   border-color: gray;
 }
+
 .buildbaron-issue {
   margin: 6px;
-  font-family: Helvetica, arial, freesans, clean, sans-serif;
-  color: #646464;
+  font-family: Helvetica,arial,freesans,clean,sans-serif;
+  color: rgb(100, 100, 100);
   font-size: 13px;
   vertical-align: bottom;
   padding: 0px;
 }
+
 .buildbaron-issue-detail-left {
   text-align: left;
   width: 33%;
@@ -36,10 +41,12 @@
   text-align: right;
   float: right;
 }
-.buildbaron-row {
+
+.buildbaron-row{
   clear: both;
   overflow: auto;
 }
-.buildbaron-row-open {
+
+.buildbaron-row-open{
   background-color: #f9e2e2;
 }
