--- a/static/partials/task_build_baron.html
+++ b/static/partials/task_build_baron.html
@@ -5,21 +5,23 @@
     >
   <div class="panel-heading">
     <h2>
-        <image class="gravatar-small" src="/ui/plugin/buildbaron/static/images/baron.png"></img> Build Baron
+        <img class="gravatar-small" src="/ui/plugin/buildbaron/static/images/baron.png">
+        </img>
+        Build Baron
     </h2>
   </div>
-  <div class="panel-body">
-    <div ng-show="build_baron_status == 'loading'">
+  <div class="panel-body" ng-switch="build_baron_status">
+    <div ng-switch-when="loading">
           <span class="spinner"><i class="icon-spin icon-spinner"></i></span>
           Searching jira for tickets
     </div>
-    <div ng-show="build_baron_status == 'error'">Searching jira failed</div>
-    <div ng-show="build_baron_status == 'nothing'">No results found matching task or tests</div>
-    <div ng-show="build_baron_status == 'success'"  class="buildbaron-results">
+    <div ng-switch-when="error">Searching jira failed</div>
+    <div ng-switch-when="nothing">No results found matching task or tests</div>
+    <div ng-switch-when="success" class="buildbaron-results">
        <div class="buildbaron-issue" ng-repeat="issue in build_baron_results">
            <div class="buildbaron-row buildbaron-row-[[issue.fields.status.name | lowercase]]">
                <span class="buildbaron-issue-summary">
-                   <a href="https://jira.mongodb.org/browse/[[issue.key]]">
+                   <a ng-href="https://jira.mongodb.org/browse/[[issue.key]]">
                        [[issue.key]]: [[issue.fields.summary]]
                    </a>
                </span>
