--- a/static/css/task_build_baron.css
+++ b/static/css/task_build_baron.css
@@ -1,7 +1,15 @@
-.buildbaron-panel {
+.notes {
+  margin: 0 0 10px;
+  font-family: monospace;
+  overflow-x: auto;
+}
+.buildbaron-pod {
   max-height: 800px;
   overflow-x: hidden;
   overflow-y: auto;
+}
+.buildbaron-results {
+  margin-top: 12px;
 }
 .buildbaron-issue-status {
   text-align: right;
@@ -13,15 +21,14 @@
 .buildbaron-issue + .buildbaron-issue {
   padding-top: 6px;
   border-top: 1px solid ;
-  border-color: gray;
+  border-color: #dee0e3;
 }
 .buildbaron-issue {
-  margin: 6px;
   font-family: Helvetica, arial, freesans, clean, sans-serif;
   color: #646464;
   font-size: 13px;
   vertical-align: bottom;
-  padding: 0px;
+  padding: 6px 0;
 }
 .buildbaron-issue-detail-left {
   text-align: left;
@@ -37,6 +44,7 @@
   float: right;
 }
 .buildbaron-row {
+  padding: 3px;
   clear: both;
   overflow: auto;
 }
@@ -45,4 +53,10 @@
 }
 .buildbaron-row-reopened{
   background-color: #f9e2e2;
+}
+.buildbaron-time{
+  margin-left: 5px;
+  font-size: 13px;
+  color: #646464;
+  font-style: italic;
 }
