--- a/static/partials/task_build_baron.html
+++ b/static/partials/task_build_baron.html
@@ -2,7 +2,7 @@
 <div
     class="buildbaron-panel"
     ng-controller="TaskBuildBaronCtrl"
-    ng-show="task.status == 'failed' && ! task.task_end_details.timed_out && have_user"
+    ng-show="task.status == 'failed' && have_user"
     >
     <h3>
         <img class="gravatar-small" src="/plugin/buildbaron/static/images/baron.png">
