--- a/static/partials/task_build_baron.html
+++ b/static/partials/task_build_baron.html
@@ -1,9 +1,6 @@
 <div class="row"><div class="col-lg-12">
-<div
-    class="buildbaron-panel"
-    ng-controller="TaskBuildBaronCtrl"
-    ng-show="task.status == 'failed' && have_user"
-    >
+<div class="buildbaron-panel" ng-controller="TaskBuildBaronCtrl"
+    ng-show="conf.enabled && task.status == 'failed' && have_user">
     <h3>
         <img class="gravatar-small" src="/plugin/buildbaron/static/images/baron.png">
         </img>
