EVG-774 always load edit time for notes

--- a/static/partials/task_build_baron.html
+++ b/static/partials/task_build_baron.html
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div ng-show="creatingTicket">
-            <span class="spinner"><i class="icon-spin icon-spinner"></i></span>
+            <span class="spinner"><i class="fa fa-spin fa-circle-o-notch"></i></span>
             Creating ticket
           </div>
         </div>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="buildbaron-results" ng-switch-when="loading">
-      <span class="spinner"><i class="icon-spin icon-spinner"></i></span>
+      <span class="spinner"><i class="fa fa-spin fa-circle-o-notch"></i></span>
       Searching JIRA for tickets
     </div>
     <div ng-switch-when="error" class="buildbaron-results">Searching JIRA failed</div>
