EVG-243 highlight blocked tickets too

--- a/static/css/task_build_baron.css
+++ b/static/css/task_build_baron.css
@@ -48,7 +48,7 @@
   clear: both;
   overflow: auto;
 }
-.buildbaron-row-open {
+.buildbaron-row-open, .buildbaron-row-blocked {
   background-color: #f9e2e2;
 }
 .buildbaron-row-reopened{
